# stock-predictor

./: build.sh  cache_AAPL.json  cache_AMZN.json  cache_BRK.B.json  cache_GLD.json  cache_GOOGL.json  cache_JNJ.json  cache_META.json  cache_MSFT.json  cache_NVDA.json  cache_PEP.json  cache_PFE.json  cache_SLV.json  cache_WMT.json  main.py  ml_models.py  pyproject.toml  requirements.txt
