[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-predictor-backend"
version = "0.1.0"
description = "Stock prediction API"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.78.0",
    "uvicorn==0.17.6",
    "requests==2.27.1",
    "pandas==1.4.2",
    "numpy==1.23.1",
    "scikit-learn==1.1.1",
    "scipy==1.8.1",
    "joblib==1.1.0",
    "pydantic==1.9.0",
    "python-dateutil==2.8.2",
] 