[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-predictor-backend"
version = "0.1.0"
description = "Stock prediction API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.85.1",
    "uvicorn==0.18.3",
    "requests==2.28.1",
    "pandas==1.5.2",
    "numpy==1.23.5",
    "scikit-learn==1.1.3",
    "scipy==1.9.3",
    "joblib==1.2.0",
    "pydantic==1.10.2",
    "python-dateutil==2.8.2",
] 